--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <base href="/sa-vaccine-numbers/">
     <title>SA Vaccine Tracker</title>
     <meta name="description" content="Simple vaccine numbers scraped from sacoronavirus.co.za">
 </head>
