--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <base href="/">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <title>SA Vaccine Tracker</title>
     <meta name="description" content="Simple vaccine numbers scraped from sacoronavirus.co.za">
 </head>
@@ -56,7 +56,7 @@
             const [current, setCurrent] = useState(null);
 
             useEffect(async ()=>{
-                const result = await fetch('/db.json')
+                const result = await fetch('db.json')
                 const json = await result.json()
                 setDb(json)
             }, [])
